# huffman-archiver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
huffman/: h_priority_queue.c  h_priority_queue.h  h_tree.h
includes/: archiver.h  h_frequency_table.h  h_priority_queue.h  h_stack.h  h_tree.h  huffman.h  huffman_algorithm.h  utils.h
src/: CMakeLists.txt  main.c
src/archiver/: CMakeLists.txt  crc16.c  huffman_archiver.c  huffman_extractor.c
src/huffman/: CMakeLists.txt  h_frequency_table.c  h_priority_queue.c  h_stack.c  h_tree.c  huffman_algorithm.c
src/utils/: CMakeLists.txt  utils.c
tests/: CMakeLists.txt  main.c  utils.c  utils.h
tests/suites/: CMakeLists.txt  archiver_test.c  extractor_test.c  h_frequency_table.c  h_frequency_table_test.c  h_pq_internal_func_test.c  h_priority_queue_test.c  h_stack_test.c  h_tree_test.c  suite1.c
