include(GNUInstallDirs)

set(CMAKE_C_FLAGS " -std=c99")

IF(NOT DEFINED LIB_VERSION_MAJOR)
    set(LIB_VERSION_MAJOR 0)
ENDIF(NOT DEFINED LIB_VERSION_MAJOR)
IF(NOT DEFINED LIB_VERSION_MINOR)
    set(LIB_VERSION_MINOR 1)
ENDIF(NOT DEFINED LIB_VERSION_MINOR)

set(LIB_VERSION_STRING ${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR})

file(GLOB LIB_SRC "*.c")

include_directories( "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/../../includes"
        "${CMAKE_CURRENT_SOURCE_DIR}/../")
add_library(util SHARED ${LIB_SRC})
add_library(utils STATIC ${LIB_SRC})

set_target_properties(util PROPERTIES VERSION ${LIB_VERSION_STRING})
set_target_properties(utils PROPERTIES VERSION ${LIB_VERSION_STRING})

install(TARGETS util DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME})
install(TARGETS utils DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME})
